@@ -1,3 +1,5 @@
+* Agent Console: rewrite script and header inclusion so that javascript.js from
+  module is included exactly once. Fixes Elastix bug #1036.
 * Dialer (ECCP): allow the "agentlogout" request to cancel a login that is still
   in progress and asking for the agent numeric password.
 
